新增视频信息

--- a/day1~day5/02JS概念入门(2).md
+++ b/day1~day5/02JS概念入门(2).md
@@ -1,3 +1,5 @@
+### 代码/笔记和视频一起食用更好哦，扫码加群领取全套免费javascript视频。
+![image](http://m.qpic.cn/psb?/V13wE8sQ0FBtUy/0IrX3l4Ub59pz0Y9YTjMW9jJSClJoXTufnDC3XEIsCg!/b/dLgAAAAAAAAA&bo=9AH3AAAAAAARBzI!&rf=viewer_4)
 ## 目录
 1. JS基础和代码规范
 2. 常量/变量
